# vanilla-recovery-utility

./: .gitignore  README.md  meson.build  test.sh
data/: meson.build  org.vanillaos.RecoveryUtility.appdata.xml.in  org.vanillaos.RecoveryUtility.desktop.in  org.vanillaos.RecoveryUtility.gschema.xml
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  meson.build  recovery-utility.gresource.xml  utils.py  vanilla-recovery-utility.in  window.py
src/core/: meson.build  recovery.py
src/gtk/: window.ui
